feat: epic 3 story 2
